<resources>
    <string name="app_name">AlinaDiplom</string>
    <string name="input">ввести в ручную</string>
    <string name="scan">отсканировать</string>
    <string name="save">Сохранить</string>
    <string name="result_name">Название результата</string>
    <string name="load_from_file">загрузить из файла xls/xlsx</string>
    <string name="account">Аккаунт</string>
    <string name="build_vector">Построить К-Вектор</string>
    <string name="statistic">Статистика</string>
    <string name="about_k_vector">О К-Векторе</string>
    <string name="about_us">О нас</string>
    <string name="example_name">Попова Алина</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="what_is">Что такое К-Вектор?</string>
    <string name="how_build_norms">Как формируются нормы?</string>
    <string name="what_color_means">Что значит цвет в К-Вектор?</string>
    <string name="how_often">Как часто строить К-Вектор?</string>
    <string name="red_zone">Красная зона! Что делать?</string>
    <string name="what_is_k_vector_health">ЧТО ТАКОЕ К-ВЕКТОР ЗДОРОВЬЯ?</string>
    <string name="k_vector_is_blabla">Это графическое представление отклонений от нормы значений параметров клеток по общему анализу крови.</string>
    <string name="norms_builds_blabla">Существуют групповые и индивидуальные нормы. Групповые нормы определяются врачами в ходе клинических испытаний: формируются группы людей по различным признакам (пол, возраст, образ жизни и др.), измеряются параметры крови доноров и вычисляются средние показатели. При этом выбор группы людей может определяться географически, сезонно, этнически и т. д. Каждый живой организм уникален, и нельзя рассчитывать на то, что параметры крови у всех людей будут совпадать даже в отсутствие болезней. Поэтому необходимо знать свои индивидуальные нормы. Для этого необходимо провести ряд измерений параметров клеток крови на одном и том же гематологическом анализаторе (чем больше измерений, тем точнее границы нормы). Состояние здоровья можно контролировать, основываясь как на отклонениях от групповых, так и индивидуальных норм.</string>
    <string name="how_norms_builds_big">КАК ФОРМИРУЮТСЯ НОРМЫ?</string>
    <string name="what_color_means_big">ЧТО ОЗНАЧАЕТ ЦВЕТ В ГРАФИЧЕСКОМ ПРЕДСТАВЛЕНИИ К-ВЕКТОРА ЗДОРОВЬЯ?</string>
    <string name="color_is_blabla">Цвет — это величина отклонения от нормы параметров клеток крови. Например:</string>
    <string name="how_often_big">КАК ЧАСТО НАДО СТРОИТЬ СВОЙ К-ВЕКТОР ЗДОРОВЬЯ?</string>
    <string name="how_often_blabla">Временная программа построения своего К-Вектора здоровья возможна в трех вариантах:\n1. Эпизодическая\n2. Регулярная\n3. Комбинированная\nЭпизодическое построение своего К-Вектора здоровья предполагает проведение общего анализа крови при существенных отклонениях в жизненном цикле, например, отпуск, командировка, сезонные инфекционные заболевания и т.п. При изменении жизненного цикла, например, создание семьи, рождение ребенка и т.д., так же предполагается построение К-Вектора здоровья.
Регулярное построение своего К-Вектора здоровья предполагает проведение общего анализа крови на регулярной основе, например, ежеквартальное, ежемесячное, еженедельное.
Комбинированный режим построения своего К-Вектора здоровья предполагает проведение общего анализа крови в форме двух вышеперечисленных вариантов.</string>
    <string name="red_zone_big">ЧТО ДЕЛАТЬ, ЕСЛИ К-ВЕКТОР ЗАШЕЛ В КРАСНУЮ ЗОНУ?</string>
    <string name="red_zone_blabla">Не паниковать.\nВо-первых, если даже К-Вектор в "красной" зоне, то большинство под-векторов, образующих общий К-Вектор, находятся в зеленой зоне. Т.е. с большинством параметров все в порядке.\nВо-вторых, отклонение К-Вектора строится в нормах параметров, которые получены усреднением по большому количеству анализов условно здоровых людей во всем мире. Есть основание полагать, что К-Вектор, построенный в рамках Вашей (ИНДИВИДУАЛЬНОЙ) нормы, будет в зеленой зоне. Займитесь ее определением.\nВ-третьих, сходите на прием к опытному терапевту.</string>
    <string name="saved_results">Сохраненные результаты:</string>
    <string name="result_hint">Результат:</string>
</resources>